ADD - Shared questions component and alter question category field to difficulty
